<resources>

    <string name="app_name">QCeeNee HD</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="menu_config">Options</string>
	<string name="menu_devices">Device List</string>
    <string name="menu_songs">Song Book</string>
	<string name="menu_control">Remote</string>
    
    <string name="title_activity_main">QCeeNee HD</string>
    <string name="title_activity_device">Device List</string>
    
    <string name="title_activity_song">Song Book</string>
    <string name="title_activity_option">Configuration</string>
    <string name="button_ok">OK</string>
    <string name="button_scan">Scan</string>
    
   	<string name="toggle_song_book_on">HD</string>
   	<string name="toggle_song_book_off">MP3</string>
   	<string name="menu_about">About</string>
   	<string name="scan">Scan</string>
   	<color name="device_separator">#FF0000</color>
   	<dimen name="device_separator_height">2dip</dimen>
   	<string name="label_config_ip_intro">Select a range to scan for CeeNee unit. By default, it scans from 2-&gt;253</string>
   	<string name="label_config_ip_start">Start to scan at: 192.168.x.</string><string name="label_config_ip_end">Stop to scan at: 192.168.x.</string>
   	<string name="label_config_ip_timeout">How long we will try to detect a device (in millisecond)</string>
   	<color name="config_title_text_color">#000000</color>
   	<string name="button_key">SEARCH</string>
   	<string name="label_mp3">MP3</string>
   	<string name="label_hd">HD</string>
   	<string name="label_sync">Sync</string>
   	<string name="song_search">Search for songs</string>
   	<string name="pref_ip_scanning">Scanning</string>
   	<string name="pref_extra_setting">Extra</string>
   	
    <string name="menu_settings">Settings</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="menu_power">Power Off</string>
    <string name="stringshare">Share</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="version_type">a1</string>
    <string name="version_date">130626</string>
    <string name="android_version">1.1</string>
    <string name="crash_toast_text">Oops, QCeeNee crashed. A report is send to CeeNee team for analyzing.</string>
    <string name="song_sync">Sync</string>
   	
</resources>
