<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_config"
        android:title="@string/menu_config"
      	android:orderInCategory="210" android:icon="@drawable/glyphicons_019_cogwheel"/>
    <item android:id="@+id/menu_song" android:title="@string/menu_songs" android:icon="@drawable/glyphicons_169_albums" android:orderInCategory="30">
    </item>
    <item android:title="@string/menu_devices" android:id="@+id/menu_device" android:icon="@drawable/glyphicons_327_sampler" android:orderInCategory="70"></item>
    <item android:id="@+id/menu_remote" android:title="@string/menu_control" android:icon="@drawable/glyphicons_139_phone" android:orderInCategory="10"></item>
    <item android:id="@+id/menu_about" android:title="@string/menu_about" android:icon="@drawable/glyphicons_195_circle_info" android:orderInCategory="100"></item>
    <item android:id="@+id/menu_power" android:title="@string/menu_power" android:icon="@drawable/glyphicons_195_circle_info" android:orderInCategory="230"></item>
</menu>
