<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ToggleButton
        android:id="@+id/karaoke_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="ToggleButton"
        android:textOff="@string/label_mp3"
        android:textOn="@string/label_hd" />

    <Button
        android:id="@+id/cmd_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="1dp"
        android:onClick="onSync"
        android:text="@string/label_sync" />
        
    <ListView
        android:id="@+id/song_list"
        android:layout_below="@id/karaoke_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        
    </ListView>

    <Button
        android:id="@+id/cmd_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/cmd_sync"
        android:onClick="testButton"
        android:text="Test" />

    <EditText
        android:id="@+id/cmd_songsearch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignBaseline="@+id/cmd_test"
        android:layout_alignBottom="@+id/cmd_test"
        android:layout_toRightOf="@+id/karaoke_switch"
        android:ems="10"
        android:hint="@string/song_search"
        android:textSize="12sp"
        android:textStyle="italic" >
        <requestFocus />
    </EditText>
</RelativeLayout>
